# energy

./: README.md  app.py  config.py  contingency_generator.py  data_loader.py  fallback_screening.py  gridsfm_oracle.py  main.py  network_loader.py  pandapower_validator.py  plan_selector.py  pyproject.toml  reporting.py  requirements.txt  risk_scoring.py  run_optimizer.py  scenario_builder.py  smard_load.csv
data/: README.md
frontend/: .env  package-lock.json  vite.config.ts
frontend/src/: styles.css
frontend/src/lib/: gridagent-api.ts
frontend/src/routes/: __root.tsx  index.tsx
src/: __init__.py  contingency.py  corrective_agent.py  explain.py  grid_loader.py  gridsfm_adapter.py  gridsfm_mapper.py  scoring.py  smard_loader.py  violation_detector.py  visualization.py
src/grid_ops_backend/: __init__.py  config.py
src/grid_ops_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/grid_ops_backend/api/: app.py  schemas.py
src/grid_ops_backend/domain/: __init__.py  models.py  run_state.py
src/grid_ops_backend/engine/: __init__.py  grid_engine.py
src/grid_ops_backend/services/: comparison_service.py  gridsfm_service.py  remediation_service.py  screening_service.py
src/grid_ops_backend/storage/: memory_repo.py
tests/: test_api.py  test_contingency.py  test_corrective_agent.py  test_hybrid_corrective_optimizer.py  test_services.py  test_violation_detector.py
